new_tests/semantics/scope/bad/010_FD1.cm

class A {
    public x:Int  
    public x:Int
}
